--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,7 @@
     <string name="bottom_nav_account">Account</string>
     <string name="bottom_nav_menu">Menu</string>
     <string name="login_or">Or</string>
+    <string name="none">none</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
