--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,4 +96,6 @@
     <string name="share_desc">Please enter the user email. The user must be a MyPass user.</string>
     <string name="share_success">Folder shared successfully.</string>
 
+    <string name="copyright">All rights reserved. © MyPass 2019</string>
+
 </resources>
